# gait-metrics

./: MANIFEST.in  README.md  pyproject.toml
gait_metrics/: __init__.py  gait_metrics.py  model_utils.py  models.py  utils.py
src/: gait_metrics.py  model_utils.py  utils.py
src/ElderNet/: __init__.py  gait_metrics.py  model_utils.py  utils.py
src/conf/: main_config.yaml
