[project]
name = "gait-metrics"
version = "0.1.0"
authors = [{ name = "Yonatan Brand", email = "brand1@mail.tau.ac.il" }]
description = "A package for analyzing acceleration data to compute gait metrics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "torch>=2.0",
    "actipy",
    "importlib-resources>=5.0",
    "requests"
]
[project.scripts]
gait-metrics = "gait_metrics.gait_metrics:main"

